# linthis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev.sh  pyproject.toml
.github/workflows/: release.yml
defaults/: .clang-tidy  config.toml
docs/: AUTO_SYNC.md  GLOBAL_HOOKS.md  SELF_UPDATE.md  config-cli-design.md  init-hooks-design.md  plan-ruff-integration.md  tasks.md
scripts/: release.sh
src/: benchmark.rs  lib.rs  main.rs  self_update.rs
src/checkers/: cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  traits.rs  typescript.rs
src/config/: cli.rs  mod.rs
src/fixers/: cpplint.rs  mod.rs  source.rs
src/formatters/: cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  traits.rs  typescript.rs
src/plugin/: auto_sync.rs  cache.rs  config_manager.rs  fetcher.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/presets/: mod.rs
src/utils/: language.rs  mod.rs  output.rs  types.rs  unicode.rs  walker.rs
test-plugin-check/: README.md  linthis-plugin.toml
tests/fixtures/test-plugin/: linthis-plugin.toml
tests/fixtures/test-plugin/python/: ruff.toml
tests/fixtures/test-plugin/rust/: clippy.toml  rustfmt.toml
tests/fixtures/us1/: good.rs  unformatted.rs
tests/integration/: mod.rs
