[package]
name = "linthis"
version = "0.1.0"
edition = "2021"
authors = ["zhlinh"]
description = "A fast, cross-platform multi-language linter and formatter"
license = "MIT"
repository = "https://github.com/zhlinh/linthis"
keywords = ["lint", "format", "cli", "code-quality"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "=4.3.0", features = ["derive"] }

# Error handling
anyhow = "=1.0.71"
thiserror = "=1.0.40"

# Serialization & Config
serde = { version = "=1.0.164", features = ["derive"] }
serde_json = "=1.0.96"
serde_yaml = "=0.9.17"
toml = "=0.5.11"

# File system
walkdir = "=2.3.3"

# Parallel processing
rayon = "=1.7.0"

# Output
colored = "=2.0.0"

# Regex
regex = "=1.8.4"

# Glob pattern matching
globset = "=0.4.10"

# Lazy initialization
lazy_static = "=1.4.0"

# Logging
log = "=0.4.18"
env_logger = "=0.10.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "linthis"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
