[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "linthis"
version = "0.0.4"
description = "A fast, cross-platform multi-language linter and formatter"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "zhlinh" }]
keywords = ["lint", "format", "cli", "code-quality", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/zhlinh/linthis"
Homepage = "https://github.com/zhlinh/linthis"
Documentation = "https://docs.rs/linthis"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
